--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* shared styles */
 *
 {
     font-family: "Work Sans", sans-serif;
@@ -7,4 +8,72 @@
     font-style: normal;
     margin: 0;
     padding: 0;
+}
+.btn-primary{
+    padding: 11px;
+    border-radius: 0.5rem;
+    background-color: #FF900E;
+    color: white;
+    border: 0;
+}
+
+/* Header styles section */
+
+header{
+    background-color: rgba(255, 144.05, 13.81, 0.10);
+    padding: 30px 180px;
+
+    
+}
+.nav-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+nav > ul{
+    display: flex;
+}
+nav > ul > li{
+    list-style: none;
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin-right: 30px;
+}
+nav a{
+    text-decoration: none;
+    color: #424242;
+
+}
+
+/* Banner styles section */
+
+.banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner-content{
+    max-width: 780px;
+    text-align: center;
+    margin: 40px auto;
+}
+.banner-title{
+    font-size: 3.8rem;
+    margin-bottom: 18px;
+
+}
+.banner-description{
+    font-size: 1rem;
+    color: #727272;
+    margin-bottom: 19px;
 }
