--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* shared styles */
-*
-{
+* {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     margin: 0;
     padding: 0;
 }
-.btn-primary{
-    padding: 11px;
+
+.btn-primary {
+    padding: 16px 30px;
     border-radius: 0.5rem;
     background-color: #FF900E;
     color: white;
@@ -19,36 +19,39 @@
 
 /* Header styles section */
 
-header{
+header {
     background-color: rgba(255, 144.05, 13.81, 0.10);
     padding: 30px 180px;
 
-    
+
 }
-.nav-title{
+
+.nav-title {
     font-size: 2.8rem;
     font-weight: 700;
     color: #131313;
 
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
 }
 
-nav > ul{
+nav>ul {
     display: flex;
 }
-nav > ul > li{
+
+nav>ul>li {
     list-style: none;
     font-size: 1.125rem;
     font-weight: 500;
     margin-right: 30px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: #424242;
 
@@ -56,24 +59,154 @@ nav a{
 
 /* Banner styles section */
 
-.banner{
+.banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.banner-content{
+.banner-content {
     max-width: 780px;
     text-align: center;
     margin: 40px auto;
 }
-.banner-title{
+
+.banner-title {
     font-size: 3.8rem;
     margin-bottom: 18px;
 
 }
-.banner-description{
+
+.banner-description {
     font-size: 1rem;
     color: #727272;
     margin-bottom: 19px;
+}
+
+/* main section styles */
+
+main {
+    max-width: 1440px;
+    margin: 4rem auto;
+}
+
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-content {
+    padding-left: 4rem;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content-title {
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+}
+
+.teams-content-description {
+    color: #727272;
+    margin-bottom: 1.5rem;
+}
+
+/* features section styles */
+.features {
+    display: flex;
+    margin-top: 100px;
+    gap: 190px;
+}
+
+.features .features-content {
+    width: 506px;
+}
+
+.features-title {
+    color: #131313;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.features-card-title {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+}
+
+.features-card-des {
+    color: #727272;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.features .features-card {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    width: 506px;
+    height: 101px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 30px 33px;
+}
+
+
+/* banner responsive media query */
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container {
+        flex-direction: column;
+        gap: 19px;
+    }
+
+    .nav-title {
+        font-size: 2.5rem;
+    }
+
+    .banner-title {
+        font-size: 3rem;
+    }
+
+    .banner-description {
+        font-size: 12px;
+    }
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content {
+        padding-left: 2.8rem;
+        padding-right: 2rem;
+    }
+
+    .teams-img-container img {
+        width: 90%;
+    }
+}
+
+@media screen and (min-width:577px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
 }
